--- a/ElasticCommander/ElasticCommander/Base.lproj/Main.storyboard
+++ b/ElasticCommander/ElasticCommander/Base.lproj/Main.storyboard
@@ -681,19 +681,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="153" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <containerView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Uiy-9r-qbO">
+                            <containerView translatesAutoresizingMaskIntoConstraints="NO" id="Uiy-9r-qbO">
                                 <rect key="frame" x="0.0" y="27" width="153" height="273"/>
                                 <connections>
                                     <segue destination="2z5-EZ-aKa" kind="embed" id="oki-vh-4Ri"/>
                                 </connections>
                             </containerView>
-                            <box verticalHuggingPriority="750" fixedFrame="YES" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="PaS-fs-kDm">
-                                <rect key="frame" x="0.0" y="24" width="153" height="9"/>
+                            <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="Do0-db-cEZ">
+                                <rect key="frame" x="0.0" y="24" width="153" height="5"/>
                                 <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                                 <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <font key="titleFont" metaFont="system"/>
                             </box>
+                            <button verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hi3-z5-zYE">
+                                <rect key="frame" x="0.0" y="5" width="153" height="23"/>
+                                <buttonCell key="cell" type="smallSquare" bezelStyle="smallSquare" imagePosition="only" alignment="center" refusesFirstResponder="YES" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="RaE-7s-f1P">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                            </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="Hi3-z5-zYE" firstAttribute="height" secondItem="teG-gX-Wdc" secondAttribute="height" id="8eX-AU-lnR"/>
+                            <constraint firstItem="Hi3-z5-zYE" firstAttribute="width" secondItem="teG-gX-Wdc" secondAttribute="width" id="9Ll-j6-Eov"/>
+                            <constraint firstAttribute="trailing" secondItem="Do0-db-cEZ" secondAttribute="trailing" id="G3y-qG-8Xu"/>
+                            <constraint firstItem="Do0-db-cEZ" firstAttribute="leading" secondItem="teG-gX-Wdc" secondAttribute="leading" id="M0c-d7-18c"/>
+                            <constraint firstItem="Hi3-z5-zYE" firstAttribute="leading" secondItem="teG-gX-Wdc" secondAttribute="leading" id="MOz-Su-yoE"/>
+                            <constraint firstItem="Hi3-z5-zYE" firstAttribute="top" secondItem="Uiy-9r-qbO" secondAttribute="bottom" id="Uvo-dS-mKD"/>
+                            <constraint firstAttribute="trailing" secondItem="Do0-db-cEZ" secondAttribute="trailing" id="V55-D5-Xop"/>
+                            <constraint firstAttribute="bottom" secondItem="Uiy-9r-qbO" secondAttribute="bottom" constant="27" id="VxR-xd-Poi"/>
+                            <constraint firstItem="Uiy-9r-qbO" firstAttribute="top" secondItem="teG-gX-Wdc" secondAttribute="top" id="bDo-i5-Q9e"/>
+                            <constraint firstItem="Uiy-9r-qbO" firstAttribute="leading" secondItem="teG-gX-Wdc" secondAttribute="leading" id="cy1-kE-SJC"/>
+                            <constraint firstAttribute="trailing" secondItem="Uiy-9r-qbO" secondAttribute="trailing" id="pAF-0r-OpB"/>
+                            <constraint firstItem="Do0-db-cEZ" firstAttribute="top" secondItem="Uiy-9r-qbO" secondAttribute="bottom" id="pC6-9I-aCo"/>
+                            <constraint firstItem="Hi3-z5-zYE" firstAttribute="leading" secondItem="teG-gX-Wdc" secondAttribute="leading" id="tXB-CZ-FPR"/>
+                            <constraint firstItem="Hi3-z5-zYE" firstAttribute="top" secondItem="Uiy-9r-qbO" secondAttribute="bottom" id="vyS-YP-VR3"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <customObject id="RdV-B2-LFB" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -852,7 +875,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="448" height="298"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="textColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <size key="minSize" width="448" height="298"/>
                                             <size key="maxSize" width="658" height="10000000"/>
                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -946,10 +969,103 @@
                     <view key="view" id="C7h-CG-rzy">
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <scrollView autohidesScrollers="YES" horizontalLineScroll="26" horizontalPageScroll="10" verticalLineScroll="26" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0LC-dV-TGI">
+                                <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
+                                <clipView key="contentView" drawsBackground="NO" id="CnR-7n-2US">
+                                    <rect key="frame" x="1" y="1" width="448" height="298"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="16" outlineTableColumn="5kt-Bp-B1J" id="21b-lN-sfe">
+                                            <rect key="frame" x="0.0" y="0.0" width="448" height="298"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <size key="intercellSpacing" width="3" height="2"/>
+                                            <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                                            <tableColumns>
+                                                <tableColumn width="445" minWidth="16" maxWidth="1000" id="5kt-Bp-B1J">
+                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
+                                                        <font key="font" metaFont="smallSystem"/>
+                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                                    </tableHeaderCell>
+                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="fc6-LN-DOT">
+                                                        <font key="font" metaFont="system"/>
+                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                                    </textFieldCell>
+                                                    <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                                    <prototypeCellViews>
+                                                        <tableCellView identifier="HeaderCell" id="3ug-QN-bVd">
+                                                            <rect key="frame" x="1" y="1" width="445" height="17"/>
+                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                            <subviews>
+                                                                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oUj-Gk-9rF">
+                                                                    <rect key="frame" x="0.0" y="1" width="145" height="14"/>
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="HEADER CELL" id="zSJ-8B-Ayn">
+                                                                        <font key="font" metaFont="smallSystemBold"/>
+                                                                        <color key="textColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                </textField>
+                                                            </subviews>
+                                                            <connections>
+                                                                <outlet property="textField" destination="oUj-Gk-9rF" id="kOx-rF-IKe"/>
+                                                            </connections>
+                                                        </tableCellView>
+                                                        <tableCellView identifier="DataCell" id="FnX-5k-tUu">
+                                                            <rect key="frame" x="1" y="20" width="445" height="17"/>
+                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                            <subviews>
+                                                                <imageView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EmE-UN-b0o">
+                                                                    <rect key="frame" x="3" y="0.0" width="17" height="17"/>
+                                                                    <imageCell key="cell" refusesFirstResponder="YES" imageScaling="proportionallyDown" image="NSActionTemplate" id="oee-O8-JQn"/>
+                                                                </imageView>
+                                                                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kjj-LD-ghG">
+                                                                    <rect key="frame" x="25" y="0.0" width="120" height="17"/>
+                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="DuL-Hk-kQo">
+                                                                        <font key="font" metaFont="system"/>
+                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                                    </textFieldCell>
+                                                                </textField>
+                                                            </subviews>
+                                                            <connections>
+                                                                <outlet property="imageView" destination="EmE-UN-b0o" id="pFg-Nl-UdU"/>
+                                                                <outlet property="textField" destination="kjj-LD-ghG" id="bwN-Xi-yC5"/>
+                                                            </connections>
+                                                        </tableCellView>
+                                                    </prototypeCellViews>
+                                                </tableColumn>
+                                            </tableColumns>
+                                        </outlineView>
+                                    </subviews>
+                                    <nil key="backgroundColor"/>
+                                </clipView>
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="RXg-wY-dti">
+                                    <rect key="frame" x="1" y="283" width="448" height="16"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                                <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="Nhq-2G-Ncy">
+                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </scroller>
+                            </scrollView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="0LC-dV-TGI" firstAttribute="height" secondItem="C7h-CG-rzy" secondAttribute="height" id="DSi-V1-9ND"/>
+                            <constraint firstItem="0LC-dV-TGI" firstAttribute="centerY" secondItem="C7h-CG-rzy" secondAttribute="centerY" id="leO-5g-1MT"/>
+                            <constraint firstItem="0LC-dV-TGI" firstAttribute="centerX" secondItem="C7h-CG-rzy" secondAttribute="centerX" id="sND-4R-1yk"/>
+                            <constraint firstItem="0LC-dV-TGI" firstAttribute="width" secondItem="C7h-CG-rzy" secondAttribute="width" id="t2R-5w-v1x"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <customObject id="zvK-S9-eWM" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-804" y="1847"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="NSActionTemplate" width="14" height="14"/>
+    </resources>
 </document>
